--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="head">
-  <img src=".photos\WorldOfPlanesBanner.png">
+  <img id="background" src=".photos\Cloud_1-01.png">
 </div>
 <div class="topNav">
   <a href="index.html" class="active">Home</a>
