--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
 <div id="head">
-  <img id="background" src=".photos\Cloud_1-01.png">
+  <h1 id="websiteTitle">World of Planes</h1>
+  <div>
+    <div id="cloud1" class="cloud"></div>
+    <div id="cloud2" class="cloud"></div>
+    <div id="cloud3" class="cloud"></div>
+    <div id="cloud4" class="cloud"></div>
+    <div id="cloud5" class="cloud"></div>
+  </div>
 </div>
 <div class="topNav">
   <a href="index.html" class="active">Home</a>
