--- a/index.html
+++ b/index.html
@@ -36,13 +36,8 @@
     <h3>~ Leonardo da Vinci</h3>
   </div>
 </div>
-<div class="grid2">
-  <div id="newsSection1" class="bodyStuff">
-
-  </div>
-  <div id="newsSection2" class="bodyStuff">
-
-  </div>
+<div>
+  <script src="Milestone1\Top10News.js"></script>
 </div>
 <div class="whiteSpace"></div>
 <div id="foot1"></div>
