--- a/Piston.html
+++ b/Piston.html
@@ -43,7 +43,9 @@
     </h2>
   </div>
   <div class="aircraftPicture">
-    <img src=".photos\BeechcraftBonanzaG36.jpg" width="600" height="400">
+    <a href="https://beechcraft.txtav.com/en/bonanza-g36">
+      <img src=".photos\BeechcraftBonanzaG36.jpg" width="600" height="400">
+    </a>
   </div>
   <div class="aircraftInfo">
     <p>
@@ -58,7 +60,9 @@
     </h2>
   </div>
   <div class="aircraftPicture">
-    <img src=".photos\BeechcraftBaronG58.jpg" width="600" height="400">
+    <a href="https://beechcraft.txtav.com/en/baron-g58">
+      <img src=".photos\BeechcraftBaronG58.jpg" width="600" height="400">
+    </a>
   </div>
   <div class="aircraftInfo">
     <p>
@@ -73,7 +77,9 @@
     </h2>
   </div>
   <div class="aircraftPicture">
-    <img src=".photos\PiperArcherTX.png" width="600" height="400">
+    <a href="https://www.piper.com/model/archer-tx/">
+      <img src=".photos\PiperArcherTX.png" width="600" height="400">
+    </a>
   </div>
   <div class="aircraftInfo">
     <p>
@@ -88,7 +94,9 @@
     </h2>
   </div>
   <div class="aircraftPicture">
-    <img src=".photos\PiperSeminole.png" width="600" height="400">
+    <a href="https://www.piper.com/model/seminole/">
+      <img src=".photos\PiperSeminole.png" width="600" height="400">
+    </a>
   </div>
   <div class="aircraftInfo">
     <p>
