--- a/Combat.html
+++ b/Combat.html
@@ -22,9 +22,92 @@
   <a href="Turboprop.html">Turboprop</a>
   <a href="Jet.html">Jet</a>
   <a href="Combat.html" class="active">Combat</a>
-  <a href="Helicopter.html">Helicopter</a>
-  <a href="Spacecraft.html">Spacecraft</a>
-  <a href="Balloon.html">中国间谍气球</a>
+</div>
+<div class="def">
+  <h2 id="title">
+    Combat
+  </h2>
+  <h3>
+    Combat planes are used by various militaries during military operations.
+  </h3>
+</div>
+<div class="contentGrid">
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Lockheed Martin F-22 Raptor
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.lockheedmartin.com/en-us/products/f-22.html">
+        <img src=".photos\F22.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A supersonic stealth air superiority fighter. <br>
+        Travel Range: 1,619 nm <br>
+        Max Occupants: 1 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Boeing C-17 Globemaster III
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.boeing.com/defense/c-17-globemaster-iii/">
+        <img src=".photos\C17.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A large strategic and tactical airlifter. <br>
+        Travel Range: 2,419 nm <br>
+        Max Occupants: 182 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+  </div>
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Lockheed Martin F-35 Lightning II
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.lockheedmartin.com/en-us/products/f-35.html">
+        <img src=".photos\F35.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A supersonic stealth multirole combat aircraft. <br>
+        Travel Range: 1,651 nm <br>
+        Max Occupants: 1 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Lockheed Martin C-130 Hercules
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.lockheedmartin.com/en-us/products/c130.html">
+        <img src=".photos\C130.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A multi-enigne prop strategic and tactical airlifter. <br>
+        Travel Range: 2,052 nm <br>
+        Max Occupants: 124 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+  </div>
 </div>
 <div class="whiteSpace"></div>
 <div id="foot1"></div>
