--- a/Piston.html
+++ b/Piston.html
@@ -22,9 +22,6 @@
   <a href="Turboprop.html">Turboprop</a>
   <a href="Jet.html">Jet</a>
   <a href="Combat.html">Combat</a>
-  <a href="Helicopter.html">Helicopter</a>
-  <a href="Spacecraft.html">Spacecraft</a>
-  <a href="Balloon.html">中国间谍气球</a>
 </div>
 <div class="def">
   <h2 id="title">
@@ -36,104 +33,118 @@
     the fact that many piston airplanes use radial engines instead of inline.
   </h3>
 </div>
-<div>
-  <div class="aircraftTitle">
-    <h2>
-      Beechcraft Bonanza G36
-    </h2>
+<div class="contentGrid">
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Beechcraft Bonanza G36
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://beechcraft.txtav.com/en/bonanza-g36">
+        <img src=".photos\BeechcraftBonanzaG36.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine piston aircraft. <br>
+        Travel Range: 920 nm <br>
+        Max Occupants: 6 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Piper Archer TX
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.piper.com/model/archer-tx/">
+        <img src=".photos\PiperArcherTX.png" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine piston aircraft. <br>
+        Travel Range: 522 nm <br>
+        Max Occupants: 4 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Cessna Turbo Stationair HD
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://cessna.txtav.com/en/piston/cessna-turbo-stationair-hd">
+        <img src=".photos\CessnaStationair.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine piston aircraft. <br>
+        Travel Range: 703 nm <br>
+        Max Occupants: 6 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
   </div>
-  <div class="aircraftPicture">
-    <a href="https://beechcraft.txtav.com/en/bonanza-g36">
-      <img src=".photos\BeechcraftBonanzaG36.jpg" width="600" height="400">
-    </a>
-  </div>
-  <div class="aircraftInfo">
-    <p>
-      A single engine piston aircraft. <br>
-      Travel Range: 920 nm <br>
-      Max Occupants: 6 <br>
-    </p>
-  </div>
-  <div class="aircraftTitle">
-    <h2>
-      Beechcraft Baron G58
-    </h2>
-  </div>
-  <div class="aircraftPicture">
-    <a href="https://beechcraft.txtav.com/en/baron-g58">
-      <img src=".photos\BeechcraftBaronG58.jpg" width="600" height="400">
-    </a>
-  </div>
-  <div class="aircraftInfo">
-    <p>
-      A twin engine piston aircraft. <br>
-      Travel Range: 1480 nm <br>
-      Max Occupants: 6 <br>
-    </p>
-  </div>
-  <div class="aircraftTitle">
-    <h2>
-      Piper Archer TX
-    </h2>
-  </div>
-  <div class="aircraftPicture">
-    <a href="https://www.piper.com/model/archer-tx/">
-      <img src=".photos\PiperArcherTX.png" width="600" height="400">
-    </a>
-  </div>
-  <div class="aircraftInfo">
-    <p>
-      A single engine piston aircraft. <br>
-      Travel Range: 522 nm <br>
-      Max Occupants: 4 <br>
-    </p>
-  </div>
-  <div class="aircraftTitle">
-    <h2>
-      Piper Seminole
-    </h2>
-  </div>
-  <div class="aircraftPicture">
-    <a href="https://www.piper.com/model/seminole/">
-      <img src=".photos\PiperSeminole.png" width="600" height="400">
-    </a>
-  </div>
-  <div class="aircraftInfo">
-    <p>
-      A single engine piston aircraft. <br>
-      Travel Range: 700 nm <br>
-      Max Occupants: 4 <br>
-    </p>
-  </div>
-  <div class="aircraftTitle">
-    <h2>
-      Cessna Turbo Stationair HD
-    </h2>
-  </div>
-  <div class="aircraftPicture">
-
-  </div>
-  <div class="aircraftInfo">
-    <p>
-      A single engine piston aircraft. <br>
-      Travel Range: 703 nm <br>
-      Max Occupants: 6 <br>
-    </p>
-  </div>
-  <div class="aircraftTitle">
-    <h2>
-      Cessna Skylane
-    </h2>
-  </div>
-  <div class="aircraftPicture">
-
-  </div>
-  <div class="aircraftInfo">
-    <p>
-      A single engine piston aircraft. <br>
-      Travel Range: 915 nm <br>
-      Max Occupants: 4 <br>
-    </p>
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Beechcraft Baron G58
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://beechcraft.txtav.com/en/baron-g58">
+        <img src=".photos\BeechcraftBaronG58.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A twin engine piston aircraft. <br>
+        Travel Range: 1,480 nm <br>
+        Max Occupants: 6 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Piper Seminole
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.piper.com/model/seminole/">
+        <img src=".photos\PiperSeminole.png" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine piston aircraft. <br>
+        Travel Range: 700 nm <br>
+        Max Occupants: 4 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Cessna Skylane
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://cessna.txtav.com/en/piston/cessna-skylane">
+        <img src=".photos\CessnaSkylane.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine piston aircraft. <br>
+        Travel Range: 915 nm <br>
+        Max Occupants: 4 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
   </div>
 </div>
 <div class="whiteSpace"></div>
