--- a/Turboprop.html
+++ b/Turboprop.html
@@ -22,9 +22,6 @@
   <a href="Turboprop.html" class="active">Turboprop</a>
   <a href="Jet.html">Jet</a>
   <a href="Combat.html">Combat</a>
-  <a href="Helicopter.html">Helicopter</a>
-  <a href="Spacecraft.html">Spacecraft</a>
-  <a href="Balloon.html">中国间谍气球</a>
 </div>
 <div class="def">
   <h2 id="title">
@@ -33,6 +30,120 @@
   <h3>
     Turboprop uses an engine similar to turbines but instead uses gas to keep the turbine spinning and air flowing into the compressors.
   </h3>
+</div>
+<div class="contentGrid">
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Beechcraft Denali
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://beechcraft.txtav.com/en/denali">
+        <img src=".photos\BeechcraftDenali.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine turbo aircraft. <br>
+        Travel Range: 1,600 nm <br>
+        Max Occupants: 8-11 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Piper M600SLS
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.piper.com/model/m600sls/">
+        <img src=".photos\PiperM600sls.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine turboprop aircraft. <br>
+        Travel Range: 1,658 nm <br>
+        Max Occupants: 6 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Cessna Caravan
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://cessna.txtav.com/en/turboprop/caravan">
+        <img src=".photos\CessnaCaravan.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine turboprop aircraft. <br>
+        Travel Range: 1,070 nm <br>
+        Max Occupants: 10-14 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+  </div>
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Beechcraft King Air 360
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://beechcraft.txtav.com/en/king-air-360">
+        <img src=".photos\BeechcraftKingAir.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A twin engine turboprop aircraft. <br>
+        Travel Range: 1,806 nm <br>
+        Max Occupants: 11 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Piper M500
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.piper.com/model/m500/">
+        <img src=".photos\PiperM500.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A single engine turboprop aircraft. <br>
+        Travel Range: 1,000 nm <br>
+        Max Occupants: 6 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Cessna SkyCourier
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://cessna.txtav.com/en/turboprop/skycourier-passenger">
+        <img src=".photos\CessnaSkyCourier.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A twin engine turboprop aircraft. <br>
+        Travel Range: 920 nm <br>
+        Max Occupants: 19 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+  </div>
 </div>
 <div class="whiteSpace"></div>
 <div id="foot1"></div>
