--- a/Jet.html
+++ b/Jet.html
@@ -22,9 +22,92 @@
   <a href="Turboprop.html">Turboprop</a>
   <a href="Jet.html" class="active">Jet</a>
   <a href="Combat.html">Combat</a>
-  <a href="Helicopter.html">Helicopter</a>
-  <a href="Spacecraft.html">Spacecraft</a>
-  <a href="Balloon.html">中国间谍气球</a>
+</div>
+<div class="def">
+  <h2 id="title">
+    Jet
+  </h2>
+  <h3>
+    A jet aircraft is an aircraft propelled by jet engines. Whereas the engines in propeller-powered aircraft generally achieve their maximum efficiency at much lower speeds and altitudes, jet engines achieve maximum efficiency at speeds close to or even well above the speed of sound.
+  </h3>
+</div>
+<div class="contentGrid">
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Boeing 737 MAX
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.boeing.com/commercial/737max/">
+        <img src=".photos\Boeing737Max.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A jet engine aircraft. <br>
+        Travel Range: 3,850 nm <br>
+        Max Occupants: 172 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Airbus A380
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.airbus.com/en/products-services/commercial-aircraft/passenger-aircraft/a380">
+        <img src=".photos\AirbusA380.webp" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A jet engine aircraft. <br>
+        Travel Range: 8,000 nm <br>
+        Max Occupants: 545 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+  </div>
+  <div>
+    <div class="aircraftTitle">
+      <h2>
+        Boeing 747
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://www.boeing.com/commercial/747/#/design-highlights/technologically-advanced/overview/">
+        <img src=".photos\Boeing747.jpg" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A jet engine aircraft. <br>
+        Travel Range: 8,099 nm <br>
+        Max Occupants: 467 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+    <div class="aircraftTitle">
+      <h2>
+        Airbus A320neo
+      </h2>
+    </div>
+    <div class="aircraftPicture">
+      <a href="https://aircraft.airbus.com/en/aircraft/a320-the-most-successful-aircraft-family-ever/a320neo">
+        <img src=".photos\AirbusA380neo.webp" width="600" height="400">
+      </a>
+    </div>
+    <div class="aircraftInfo">
+      <p>
+        A jet engine aircraft. <br>
+        Travel Range: 6,300 nm <br>
+        Max Occupants: 194 <br>
+        Click on the image for more info! <br>
+      </p>
+    </div>
+  </div>
 </div>
 <div class="whiteSpace"></div>
 <div id="foot1"></div>
