--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
   </div>
 </div>
 <div>
-  <script src="Milestone1\Top10News.js"></script>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name"><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br>
+
+    <label for="favoriteplane">Favorite Plane:</label>
+    <input type="text" id="favoriteplane" name="favoriteplane"><br>
+
+    <input type="submit" value="Submit">
+  </form>
+  <script src="Form.js"></script>
 </div>
 <div class="whiteSpace"></div>
 <div id="foot1"></div>
